# schat

./: .cproject  .project  ChangeLog  Doxyfile  Gruntfile.js  ProjectHome.md  THANKS  schat.pro  whatsnew.txt
branches/0.3/: schat.pro
branches/0.4/: .cproject  schat.pro
branches/0.5/: .cproject  .project  Doxyfile
branches/0.6/: Doxyfile
branches/0.7/: .cproject  Doxyfile
branches/0.8/: .cproject  .project
branches/2.0/: .cproject  .project  Doxyfile  schat2.pro  whatsnew.txt
branches/2.1.x/misc/ReadTag/ReadTag/: CMakeLists.txt
branches/v4-sandbox/: .cproject  Doxyfile
data/: customize.qrc  motd.html  schat-vga.qrc  schat.qrc  schat2-core.qrc  schat2.qrc  schatd-ui.qrc  schatd.qrc
data/doc/: ChangeLog.en.html  ChangeLog.html  commands.txt  feeds.txt  members.html  options.txt  schatd.conf.example  upgrade.txt
data/html/: ChatView.html  ChatView.js  about.css  about.html  style.css
data/networks/: SimpleNet.xml
data/translations/: build.cmd  customize_en.ts  customize_ru.qm  customize_ru.ts  customize_uk.ts  schat2-client_en.ts  schat2-core_en.ts  schat2-core_ru.ts  schat2_en.ts  schat2_ru.qm  schat2_ru.ts  schat_en.qm  schat_en.ts  schat_ru.qm  schat_ru.ts  schat_uk.qm  schat_uk.ts  schatd-ui_ru.qm  schatd-ui_ru.ts  schatd2_ru.ts  schatd_ru.qm  schatd_ru.ts  schatd_uk.ts
res/: schat-authd.qrc  schat.qrc
src/: server.pro  src.pro
tag/1.99.52/misc/ReadTag/ReadTagDLL/: CMakeLists.txt
trunk/: .cproject  .project  ChangeLog  Doxyfile  Gruntfile.js  package.json  schat.pro
web/: Gruntfile.js  app.js  config.json.example  package.json
(+6837 files in other folders)
